# tz-player

./: .gitignore  .pre-commit-config.yaml  .treeignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION_READY_CHECKLIST.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  TODO.md  noxfile.py  pyproject.toml  repo_mcp.toml
.claude/: settings.local.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  native-helper-artifacts.yml  release-cut.yml  release.yml
.repo_mcp/: audit.jsonl
docs/: README.md  architecture.md  gap-analysis.md  internal-doc-coverage.md  internal-doc-pr-checklist.md  license-compliance.md  media-setup.md  perf-benchmarks.md  perf-media.md  release-process.md  usage.md  visualizations.md  vlc-smoke-test.md  workflow-acceptance.md
docs/adr/: ADR-0000-template.md  ADR-0001-incremental-stabilization-over-rewrite.md  ADR-0002-keyboard-first-focus-contract.md  ADR-0003-playback-speed-cap-4x.md  ADR-0004-audio-level-service-and-envelope-cache.md  ADR-0005-external-media-tooling-and-doctor-diagnostics.md  ADR-0006-lazy-analysis-cache-scalar-spectrum.md  ADR-0007-large-library-search-fts-and-fallback.md  ADR-0008-lazy-beat-detection-cache-and-plugin-contract.md  ADR-0009-live-sample-stream-gate-for-true-waveform-visualizers.md  ADR-0010-librosa-spike-workflow-and-licensing-guardrails.md  README.md
docs/workflow/: README.md  app-startup-lifecycle.md  play-selected-track.md  playback-time-volume-speed-lifecycle.md  playback-transport-controls-lifecycle.md  visualizer-lifecycle.md
src/tz_player/: __init__.py  app.py  cli.py  doctor.py  events.py  gui.py  logging_utils.py  media_formats.py  paths.py  perf_benchmarking.py  perf_observability.py  perf_profiling.py  runtime_config.py  setup.py  state_store.py  version.py
src/tz_player/db/: __init__.py  schema.py
src/tz_player/services/: __init__.py  analysis_cache_pruner.py  audio_analysis_bundle.py  audio_beat_analysis.py  audio_decode.py  audio_envelope_analysis.py  audio_envelope_store.py  audio_level_service.py  audio_spectrum_analysis.py  audio_spectrum_native_cli.py  audio_tags.py  audio_waveform_proxy_analysis.py  beat_service.py  beat_store.py  fake_backend.py  metadata_service.py  playback_backend.py  player_service.py  playlist_store.py  spectrum_service.py  spectrum_store.py  sqlite_retry.py  vlc_backend.py  waveform_proxy_service.py  waveform_proxy_store.py
src/tz_player/ui/: __init__.py  actions_menu.py  playlist_pane.py  playlist_viewport.py  slider_bar.py  status_pane.py  text_button.py  transport_controls.py
src/tz_player/utils/: __init__.py  async_utils.py  time_format.py
src/tz_player/visualizers/: __init__.py  audio_tornado.py  base.py  basic.py  beat_scope.py  constellation.py  cover_ascii.py  data_core_frag.py  ember_field.py  fireworks.py  gravity_well.py  hackscope.py  host.py  isolated_runner.py  magnetic_grid.py  matrix.py  ops_cyberpunk.py  orbital_system.py  (+12 more)
tests/: conftest.py  test_analysis_cache_persistence_integration.py  test_analysis_cache_pruner.py  test_app_beat_analysis.py  test_app_envelope_analysis.py  test_app_parser.py  test_app_speed_limits.py  test_audio_analysis_bundle.py  test_audio_beat_analysis.py  test_audio_envelope_analysis.py  test_audio_envelope_store.py  test_audio_level_service.py  test_audio_spectrum_analysis.py  test_audio_spectrum_native_cli.py  test_audio_tags.py  test_audio_waveform_proxy_analysis.py  test_backend_selection.py  test_beat_service.py  test_beat_store.py  test_cli_parser.py  test_doctor.py  test_extract_changelog_release.py  test_focus_navigation_matrix.py  test_gui_parser.py  test_logging_config.py  test_metadata_debounce.py  test_metadata_service.py  test_native_spectrum_helper.py  test_native_spectrum_helper_c_poc.py  test_native_spectrum_helper_stub.py  test_non_blocking_paths.py  test_paths.py  test_perf_benchmarking.py  test_perf_observability.py  test_perf_profiling.py  test_performance_opt_in.py  test_player_service.py  test_playlist_editing_integration.py  test_playlist_store.py  test_playlist_viewport.py  (+52 more)
tools/: build_native_spectrum_helper.ps1  build_native_spectrum_helper.sh  build_native_spectrum_helper_c_poc.ps1  build_native_spectrum_helper_c_poc.sh  extract_changelog_release.py  native_spectrum_helper_c_poc.c  native_spectrum_helper_stub.py  perf_compare.py  perf_compare_suite.py  perf_profile.py  perf_report.py  perf_run.py  py_tree.py  release.cmd  release.py  release.sh  release_prepare.py  run_native_spectrum_helper_bench.sh  run_native_spectrum_helper_poc_bench.sh  setup.cmd  tree_maker.py  tz_player_native_helper.c  vlc_smoke.py  windows_helper_smoke_test.ps1
(+5 files in other folders)
