[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-player"
version = "0.2.0rc1"
description = "TaggedZ's command line music player."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Matthew Craig", email = "15974146+taggedzi@users.noreply.github.com" },
]

urls = { "Homepage" = "https://github.com/OWNER/tz-player", "Issues" = "https://github.com/OWNER/tz-player/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


dependencies = [
  "textual>=0.59",
  "platformdirs>=4.2",
  "mutagen>=1.47",
  "python-vlc>=3.0.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",

  "mypy>=1.6",


  "nox>=2024.3.2",


]


[project.scripts]
tz-player = "tz_player.app:main"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]



[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "W"]
ignore = [
  "E501",
  "UP045",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
disallow_any_generics = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "vlc",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = [
  "-ra",
]
testpaths = ["tests"]
