[build-system]
# Standard setuptools backend for editable installs and packaging.
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tz-player"
dynamic = ["version"]
description = "TaggedZ's command line music player."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Matthew Craig", email = "15974146+taggedzi@users.noreply.github.com" },
]

urls = { "Homepage" = "https://github.com/taggedzi/tz-player", "Issues" = "https://github.com/taggedzi/tz-player/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


dependencies = [
  # Textual terminal UI framework.
  "textual>=0.59",
  # Cross-platform user data/config directory resolution.
  "platformdirs>=4.2",
  # Lightweight audio metadata extraction.
  "tinytag>=2.0",
  # Cover-art decode/resize for ASCII visualizer plugins.
  "Pillow>=10.0",
  # Real playback backend.
  "python-vlc>=3.0.0",
]


[project.optional-dependencies]
analysis = [
  # Optional higher-level audio analysis stack (beat/onset experimentation).
  "librosa>=0.10",
]

dev = [
  # Test runner.
  "pytest>=7.4",
  # Lint + formatter.
  "ruff>=0.5",

  # Static type checking.
  "mypy>=1.6",

  # Optional local automation runner.
  "nox>=2024.3.2",
]


[project.scripts]
# Primary user-facing entrypoint.
tz-player = "tz_player.app:main"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "tz_player.version.__version__" }



[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "W"]
ignore = [
  "E501",
  "UP045",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
disallow_any_generics = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "tests.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "vlc",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "librosa",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = [
  "-ra",
]
testpaths = ["tests"]
